# extrae

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  INSTALL-examples  Makefile.am  PATHS  README  README-DEEP.md  README.md  RELEASE-PROCEDURE  TODO  bootstrap  configure.ac  substitute  substitute-all  update-submodules.sh
2.3.3/: ChangeLog  Makefile.am  configure.ac  substitute
2.3.3/config/: acarchive.m4  mpi-macros.m4  posix-clock-macros.m4  show-config.m4
2.3.3/doc/: XML-section.tex  environmentvariables-section.tex  merge-section.tex  user-guide.tex
2.3.3/doc/XML/: config.xml.tex
2.3.3/doc/user-guide/: images.tex  user-guide.html
2.3.3/example/AIX/: extrae.xml  summarized_trace_basic.xml
2.3.3/include/: extrae_internals.h  extrae_types.h  extrae_user_events.h  ppu_trace_sdk2.h
2.3.3/src/common/: events.c  extrae_version.h
2.3.3/src/tracer/: Makefile.am  calltrace.c  mode.h  signals.h  trace_macros_pacx.h
2.3.4/doc/: Makefile.am  XML-section.tex  instrumented-routines-section.tex  quick-guide-section.tex  user-guide.ps
2.3.4/doc/XML/: others.xml.tex
2.3.4/doc/user-guide/: images.pl  images.tex
2.5.1/src/others/: Makefile.am  reducempit.c
2.5.2/src/java-connector/: Makefile.am
2.5.2/src/others/: Makefile.am
3.1.0/include/: Makefile.am
3.1.0/src/cmd-line/: Makefile.am  extrae-cmd-emit.c  extrae-cmd-emit.h  extrae-cmd-fini.h  extrae-cmd-init.h
3.1.0/src/tracer/: Makefile.am  auto_init.c  mode.h  mpif.h  persistent_requests.c  sampling.c  signals.c  taskid.c  trace_macros.h
3.2.1/src/others/: Makefile.am
3.3.0/: ChangeLog  INSTALL-examples  Makefile.am  RELEASE-PROCEDURE  configure.ac  substitute
3.3.0/config/: boost-macros.m4  java.m4  macros.m4  pebs-sampling.m4
3.3.0/doc/: XML-section.tex  configure-installation.tex  quick-guide-section.tex  regression-tests.tex  user-guide.ps  user-guide.tex
3.3.0/doc/XML/: callers.xml.tex  extrae.xml.tex  others.xml.tex
3.3.0/doc/overheads/: overheads.2parts.gnuplot
3.3.0/doc/user-guide/: WARNINGS  images.pl  images.tex  internals.pl  user-guide.css
3.3.0/etc/: configured.sh  extrae.sh
3.3.0/example/: Makefile.inc
3.3.0/example/AIX/: extrae.xml  extrae_explained.xml  summarized_trace_basic.xml
3.3.0/example/BGP/: ll_trace.sh
3.3.0/include/: Makefile.am  extrae_types.h  extrae_user_events.h  extraef_user_events.h
3.3.0/scripts/: Makefile.am
3.3.0/src/: Makefile.am
3.3.0/src/cmd-line/: extrae-cmd-emit.c  extrae-cmd-emit.h  extrae-cmd-fini.c  extrae-cmd-fini.h  extrae-cmd-init.c  extrae-cmd.c  extrae-cmd.h
3.3.0/src/common/: Makefile.am  common.h  debug.h  events.c  events.h  extrae_version.h  mpit_header.h  new-queue.h  num_hwc.h  openshmem_events.h  queue.h  record.h  utils.c
3.3.0/src/java-connector/: Makefile.am
3.3.0/tests/: Makefile.am
doc/: API-section.tex  FAQ-section.tex  Makefile.am  XML-section.tex  configure-installation.tex  environmentvariables-section.tex  examples-section.tex  instrumented-routines-section.tex  merge-section.tex  online.tex  overhead.tex  pnmpi-section.tex  quick-guide-section.tex  submit-bug.tex  user-guide.ps  user-guide.tex  wholeXML-section.tex
doc/XML/: bursts.xml.tex  callers.xml.tex  config.xml.tex  counters.xml.tex  dynamic-memory.xml.tex  extrae.xml.tex  input-output.xml.tex  intel-pebs.xml.tex  merge.xml.tex  mpitrace.xml.tex  opencl.xml.tex  openmp.xml.tex  others.xml.tex  storage.xml.tex  trace-control.xml.tex  userfunctions.xml.tex
doc/overheads/: ARMv7l-MB  INTEL_HSW_JURECA  INTEL_NHM_MT  INTEL_SNB_MN3  overheads.2parts.gnuplot  overheads.eps  overheads.gnuplot
doc/user-guide/: WARNINGS  images.aux  images.pl  images.tex  index.html  internals.pl  labels.pl  user-guide.html
docs/: Makefile.am  make.bat.bak
docs/source/: FAQ.rst  api.rst  conf.py  configure-installation.rst  envvars.rst  examples.rst  index.rst  instrumented-routines.rst  introduction.rst  merge.rst  online.rst  overhead.rst  pnmpi.rst  quick-guide.rst  regression-tests.rst  see-also.rst  submit-bug.rst  wholeXML.rst  xml.rst
etc/: Makefile.am  configured.sh  extrae.csh  extrae.sh  ompitrace.csh  ompitrace.sh
include/: Makefile.am  Makefile.extrae_module  extrae_internals.h  extrae_module.f  extrae_module.f90  extrae_types.h  extrae_user_events.h  extrae_version.h.in  extraef_user_events.h  mpitrace_user_events.h  mpitracef_user_events.h  ppu_trace.h  ppu_trace_sdk1.h  ppu_trace_sdk2.h  spu_trace.h  sputrace_user_events.h
manuals/: Makefile.am  UFlist.1  extrae.1  extrae_event.3  mpi2prv.1
scripts/: Makefile.am  animate.pl  animate2.pl  compare_clusters.pl  cpistack_stats.pl  extrae-post-installation-upgrade.sh  mrnrun
src/cmd-line/: Makefile.am  extrae-cmd-emit.c  extrae-cmd-fini.c  extrae-cmd-init.c  extrae-cmd-init.h  extrae-cmd.c  extrae-cmd.h
src/extrae-uncore/: Makefile.am  extrae-uncore.py  extrae_uncore_template.xml
src/java-connector/: Makefile.am
src/merger/: Makefile.am  merger.c
src/others/: Makefile.am  genmpits.c  papi_best_set.C  papi_best_set.c  papi_best_set_old.c  pyextrae.py.in  reducempit.c
src/tracer/: Makefile.am  UF_gcc_instrument.c  UF_gcc_instrument.h  UF_xl_instrument.c  UF_xl_instrument.h  auto_fini.c  auto_fini.h  auto_init.c  auto_init_fini.c  calltrace.c  calltrace.h  change_mode.c  change_mode.h  defines.h  extrae_mpif.h  hash_table.c  hash_table.h  mode.c  mode.h  mpif.h  persistent_requests.c  persistent_requests.h  pthread_redirect.c  pthread_redirect.h  sampling.c  sampling.h  signals.c  signals.h  taskid.c  taskid.h  threadid.c  threadid.h  trace_hwc.h  trace_macros.h  trace_macros_gpu.h  trace_macros_mpi.h  trace_macros_omp.h  trace_macros_pacx.h  xalloc.c  xml-parse.c  (+1 more)
tests/overhead/: JavaFakeRoutine.java  JavaNEvent4.java  Makefile.am  Makefile.tests.overhead  extrae-header.c  extrae.xml  extrae_event.c  extrae_eventandcounters.c  extrae_get_caller1.c  extrae_get_caller4.c  extrae_get_caller6.c  extrae_nevent4.c  extrae_trace_callers.c  extrae_user_function.c  extraej.xml  extraej_functionlist  ia32_rdtsc_clock.c  mutex.c  papi_read1.c  papi_read4.c  run_overhead_tests.sh
(+3371 files in other folders)
